# push-notifications-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  diesel.toml  readme.md  rustfmt.toml  schema.sql
crates/database/: Cargo.toml
crates/database-migration/: Cargo.toml
crates/database/migrations/2022-11-30-040650_init/: down.sql
crates/database/migrations/2023-02-08-145124_add_topics_order_execution_table/: down.sql  up.sql
crates/database/src/: config.rs  device.rs  error.rs  lib.rs  message.rs  schema.rs  stream.rs  subscription.rs
crates/error/: Cargo.toml
crates/error/src/: error.rs
crates/model/: Cargo.toml
crates/model/src/: asset.rs  device.rs  event.rs  lib.rs  message.rs  order.rs  price.rs  time.rs  topic.rs  waves.rs
crates/processing/: Cargo.toml
crates/processing/src/: asset.rs  error.rs  lib.rs  processing.rs
crates/processing/src/localization/: config.rs  lokalise_gateway.rs  mod.rs  repo.rs  translations.rs
crates/push-notifications-api/: Cargo.toml
crates/push-notifications-api/src/: api.rs  config.rs  db.rs  error.rs  main.rs  topic.rs
crates/push-notifications-processor/: Cargo.toml
crates/push-notifications-processor-orders/: Cargo.toml
crates/push-notifications-processor-orders/src/: config.rs  main.rs
crates/push-notifications-processor-orders/src/source/: mod.rs  orders.rs
crates/push-notifications-processor-prices/: Cargo.toml
crates/push-notifications-processor-prices/src/: config.rs  main.rs
crates/push-notifications-processor-prices/src/source/: blockchain_updates.rs  data_service.rs  mod.rs  prices.rs
crates/push-notifications-processor/src/: config.rs  main.rs  processing.rs
crates/push-notifications-processor/src/localization/: lokalise_gateway.rs  template.rs  translations.rs
crates/push-notifications-processor/src/source/: mod.rs  orders.rs  prices.rs
crates/push-notifications-sender/: Cargo.toml
crates/push-notifications-sender/src/: config.rs  main.rs
migrations/2022-11-30-040650_init/: down.sql  up.sql
src/: _main.rs  config.rs  error.rs  main.rs
src/lib/: api.rs  asset.rs  backoff.rs  config.rs  db.rs  device.rs  error.rs  fcm.rs  lib.rs  localization.rs  message.rs  model.rs  processing.rs  schema.rs  source.rs  stream.rs  subscription.rs
src/lib/config/: api.rs  lokalise.rs  mod.rs  postgres.rs  processor.rs  sender.rs
src/lib/localization/: lokalise_gateway.rs  mod.rs  repo.rs  template.rs  translations.rs
src/lib/source/: blockchain_updates.rs  data_service.rs  orders.rs  prices.rs
src/repo/: assets.rs  lokalise.rs  mod.rs
