# push-notifications-rs

[workspace]
members = ["crates/*"]

[workspace.package]
version = "2.0.0"
edition = "2021"

[workspace.dependencies]
# Local crates
database = { path = "./crates/database", version = "0.0.0" }
error = { path = "./crates/error", version = "0.0.0" }
model = { path = "./crates/model", version = "0.0.0" }
