# push-notifications-rs

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "2.1.1"
edition = "2021"

[workspace.dependencies]
# Local crates
database = { path = "./crates/database", version = "0.0.0" }
model = { path = "./crates/model", version = "0.0.0" }
processing = { path = "./crates/processing", version = "0.0.0" }
# Crates.io
anyhow = "1"
async-trait = "0.1"
bb8 = { version = "0.8", default-features = false, features = [] }
bigdecimal = "0.4"
bs58 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["std"] }
diesel = { version = "2.1", default-features = false, features = ["chrono", "postgres", "serde_json", "without-deprecated"] }
diesel-async = { version = "0.4", features = ["postgres", "bb8"] }
diesel_migrations = "2.1"
envy = "0.4"
fcm = "0.9" # uses chrono with default features, which transitively uses legacy 'time' crate with security issues
itertools = "0.12"
lazy-regex = { version = "3", default-features = false, features = ["std", "perf"] } # don't need Unicode support
redis = { version = "0.24", default-features = false, features = ["aio", "tokio-comp", "streams"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
warp = { version = "0.3", default-features = false }
waves-rust = ">=0.2.3"
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "rust_v1.5.2" }
wavesexchange_apis = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_apis/0.1.39" }
wavesexchange_loaders = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_loaders/0.2.2" }
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.14.10" }
