[package]
name = "database-migration"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow = "1.0"
diesel = { version = "2.0", default-features = false, features = ["chrono", "postgres", "serde_json", "without-deprecated"] }
diesel_migrations = "2.0"

# Local deps
database.workspace = true

[[bin]]
name = "migration"
path = "src/main.rs"
