[package]
name = "database"
version = "0.0.0"
edition.workspace = true

[dependencies]
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
envy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Local deps
model.workspace = true
