[package]
name = "database"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations.workspace = true
envy.workspace = true
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
wavesexchange_log.workspace = true

# Local deps
model.workspace = true

[[bin]]
name = "migration"
path = "src/bin/migration.rs"
