[package]
name = "error"
version = "0.0.0"
edition.workspace = true

[dependencies]
bb8 = "0.8"
diesel = { version = "2.0", default-features = false, features = ["chrono", "postgres", "serde_json", "without-deprecated"] }
diesel-async = { version = "0.2", features = ["postgres"] }
envy = "0.4"
fcm = "0.9" # uses chrono with default features, which transitively uses legacy 'time' crate with security issues
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
thiserror = "1.0"
warp = "0.3"
wavesexchange_apis = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_apis/0.1.23" }
wavesexchange_loaders = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_loaders/0.2.1" }
