[package]
name = "push-notifications-api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
bb8 = { version = "0.8", default-features = false, features = [] }
diesel = { version = "2.0", default-features = false, features = ["postgres"] }
diesel-async = { version = "0.2", features = ["postgres", "bb8"] }
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
warp = "0.3"
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.14.4" }

# Local deps
database.workspace = true
model.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"
