[package]
name = "push-notifications-api"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
bb8.workspace = true
diesel.workspace = true
diesel-async.workspace = true
envy.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
warp.workspace = true
wavesexchange_log.workspace = true
wavesexchange_warp.workspace = true

# Local deps
database.workspace = true
model.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"
