[package]
name = "push-notifications-processor"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bigdecimal = "0.3"
bs58 = "0.4"
diesel-async = { version = "0.2", features = ["postgres", "bb8"] }
envy = "0.4"
lazy-regex = { version = "2", default-features = false, features = ["std", "perf"] } # don't need Unicode support
redis = { version = "0.22", default-features = false, features = ["aio", "tokio-comp", "streams"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt-multi-thread"] }
waves-protobuf-schemas = { git = "https://github.com/wavesplatform/protobuf-schemas", tag = "rust_v1.4.3-1" }
wavesexchange_apis = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_apis/0.1.23" }
wavesexchange_loaders = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_loaders/0.2.1" }
wavesexchange_log = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_log/0.5.1" }
wavesexchange_warp = { git = "https://github.com/waves-exchange/wavesexchange-rs", tag = "wavesexchange_warp/0.14.4" }

# Local deps
database.workspace = true
model.workspace = true
error.workspace = true

[[bin]]
name = "processor"
path = "src/main.rs"
